# interns

./: .dockerignore  .gitignore  .mcp.json  .railwayignore  CLAUDE.md  Dockerfile  README.md
agents/: README.md
brain/: README.md
toolbox/: TOOLBOX.md  pyproject.toml
toolbox/src/toolbox/: cli.py
toolbox/src/toolbox/core/: auth.py  config.py  events.py  io.py  ledger.py  llm.py  models.py  runner.py
toolbox/src/toolbox/primitives/apollo/: TOOL.md  cli.py
toolbox/src/toolbox/primitives/apollo/tests/: test_smoke.py
toolbox/src/toolbox/primitives/compose/: TOOL.md  cli.py  lib.py
toolbox/src/toolbox/primitives/compose/tests/: test_smoke.py
toolbox/src/toolbox/primitives/discord/: TOOL.md  cli.py
toolbox/src/toolbox/primitives/domains/: TOOL.md  cli.py
toolbox/src/toolbox/primitives/domains/tests/: test_smoke.py
toolbox/src/toolbox/primitives/extract/: TOOL.md  cli.py
toolbox/src/toolbox/primitives/fetch/: TOOL.md  cli.py
toolbox/src/toolbox/primitives/findemail/: TOOL.md  cli.py
toolbox/src/toolbox/primitives/gmail/: TOOL.md  cli.py  lib.py
toolbox/src/toolbox/primitives/inbox/: TOOL.md  cli.py
toolbox/src/toolbox/primitives/llm/: TOOL.md  cli.py
toolbox/src/toolbox/primitives/storeleads/: TOOL.md  cli.py
toolbox/src/toolbox/primitives/throttle/: TOOL.md  cli.py
toolbox/src/toolbox/primitives/verify/: TOOL.md  cli.py
toolbox/src/toolbox/process/: cli.py
toolbox/tests/: test_core.py  test_extract.py  test_ledger_refresh.py  test_runner.py
toolbox/tests/integration/: test_e2e_crash_resume.py  test_ledger_integration.py
(+549 files in other folders)
