[project]
name = "toolbox"
version = "0.1.0"
description = "Blackwell automation harness: primitives + runner (see harness/outreach_automation_docs/)"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "httpx>=0.27",
    "tenacity>=8.3",
    "keyring>=25",
    "anthropic>=0.40",
    "ruamel.yaml>=0.18",
    "dnspython>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.6",
]

[project.scripts]
toolbox = "toolbox.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toolbox"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/toolbox", "tests"]
markers = [
    "integration: requires a running local Supabase stack (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008", "UP047"]  # B008: Typer uses function calls in defaults by design
